--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,10 +27,10 @@ import Layout from '../layouts/Layout.astro';
           <h2>Yay! 🎉</h2>
           <p>You've made me the right choice! 💖</p>
           <div class="photo-collage">
-            <img src="../pics/real/1.jpg" alt="Memory 1">
-            <img src="../pics/real/2.jpg" alt="Memory 2">
-            <img src="../pics/real/3.jpg" alt="Memory 3">
-            <img src="../pics/real/4.jpg" alt="Memory 4">
+            <img src="/valentine/pics/real/1.JPG" alt="Memory 1">
+            <img src="/valentine/pics/real/2.JPG" alt="Memory 2">
+            <img src="/valentine/pics/real/3.JPG" alt="Memory 3">
+            <img src="/valentine/pics/real/4.JPG" alt="Memory 4">
           </div>
 		  <div class="buttons">
 		    <button id="toonify" class="btn btn-yes">Toonify!!</button>
@@ -598,7 +598,7 @@ import Layout from '../layouts/Layout.astro';
         
         // Change image source at the midpoint of the flip (when rotated 90deg)
         setTimeout(() => {
-          photo.src = `../pics/stickers/${index + 1}.png`;
+          photo.src = `/valentine/pics/stickers/${index + 1}.png`;
         }, 400);
         
         // After animation, add flipped class and remove flipping
@@ -615,7 +615,7 @@ import Layout from '../layouts/Layout.astro';
         
         // Change image source at the midpoint
         setTimeout(() => {
-          photo.src = `../pics/real/${index + 1}.jpg`;
+          photo.src = `/valentine/pics/real/${index + 1}.JPG`;
         }, 400);
         
         // After animation, remove unflipping class
