--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,10 +27,10 @@ import Layout from '../layouts/Layout.astro';
           <h2>Yay! 🎉</h2>
           <p>You've made me the right choice! 💖</p>
           <div class="photo-collage">
-            <img src="valentine/public/real/1.jpg" alt="Memory 1">
-            <img src="valentine/public/real/2.jpg" alt="Memory 2">
-            <img src="valentine/public/real/3.jpg" alt="Memory 3">
-            <img src="valentine/public/real/4.jpg" alt="Memory 4">
+            <img src="/real/1.jpg" alt="Memory 1">
+            <img src="/valentine/public/real/2.jpg" alt="Memory 2">
+            <img src="/valentine/public/real/3.jpg" alt="Memory 3">
+            <img src="/valentine/public/real/4.jpg" alt="Memory 4">
           </div>
 		  <div class="buttons">
 		    <button id="toonify" class="btn btn-yes">Toonify!!</button>
