--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from '../layouts/Layout.astro';
         <div class="envelope-flap"></div>
       </div>
       
-      <h1 class="question">Will you be my valentine?</h1>
+      <h1 class="question">Kat, will you be my valentine?</h1>
       
       <div class="buttons">
         <button id="yesBtn" class="btn btn-yes">Yes! 💕</button>
